@@ -1,4 +1,5 @@
 FROM openjdk:8-jdk-alpine
 ADD target/LikeRestServices.jar ws_LikeRestServices_sf.jar
 EXPOSE 8085
-ENTRYPOINT ["java","-jar","ws_LikeRestServices_sf.jar"]
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap  -XX:MaxRAMFraction=1 -XshowSettings:vm "
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar ws_LikeRestServices_sf.jar" ]
